@@ -824,3 +824,6 @@
 
 2013-06-11  Daniel Willmann
         * Make elm_tooltip more robust if not run inside X
+
+2013-06-13  Rafael Antognolli
+        * Get the framespace from the theme.
